--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
-body {
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.flex-side{
+  display: flex;
+}
+.navigation{
+  font-family: 'Inter';
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  color: #8692A6;
+}
+.nav-back{
+  padding-left: 14px;
+  cursor: pointer;
+}
+label{
+  display: inline-block;
+  padding: 14px 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #696F79; 
+}
+input:not([type="checkbox"]){
+  width: 100%;
+  border: 1px solid #8692A6;
+  border-radius: 6px;
+  padding: 15px;  
+}
+.base-line{
+  height: 4px;
+  width: 100%;
+  background: #C4C4C4;
+  border-radius: 4px;
+  margin: 4px 0;
+}
+.sub-line{
+  height: 100%;
+  width: 1%;
+  background: #FFC107;
+  border-radius: 4px;
+}
+.p-password{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: #FFC107; 
+}
+.check-align{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 6px;
+}
+input[type=checkbox]{
+  background-color: #1565D8 !important; /*No Work!*/
+  accent-color:#1565D8 !important ; /*No Work!*/
+  border-radius: 4px; 
+  cursor: pointer;
+}
+.or-txt{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color:#BABABA ;
+  padding: 10px 0 20px;
+}
+a{
+  text-decoration: none;
+  color: #3278dd;
 }
