--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,9 @@ a{
   text-decoration: none;
   color: #3278dd;
 }
+.container-home{
+  display: flex;
+  padding: 20px 25px;
+  min-height: 100vh;
+  overflow: hidden;
+}
