Add dark and light mode and add the not found page

--- a/src/Component/SectionHome/Header/style.css
+++ b/src/Component/SectionHome/Header/style.css
@@ -22,3 +22,12 @@ div.user{
     font-size: 22px;
   }
 }
+
+div.user.dark-border p{
+  color: white;
+
+}
+div.user .dark-border{
+  border: 2px solid white;
+  border-radius: 50%;
+}
