--- a/src/Component/SectionHome/Title/style.css
+++ b/src/Component/SectionHome/Title/style.css
@@ -1,6 +1,11 @@
+.title.light-title{
+  color: #000000 ;
+}
+.title.dark-title{
+  color: #FFFFFF ;
+}
 h2.title{
     font-family: 'Gilroy';
-    color: #000000 ;
     font-size: 35px;
     font-weight: 800;
     line-height: 43px;
