--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,10 @@ a{
   min-height: 100vh;
   overflow: hidden;
 }
+.container-home.light {
+    background-color: white;
+}
+
+.container-home.dark {
+    background-color: black;
+}
