Authentication & Integration with APIs

--- a/src/index.css
+++ b/src/index.css
@@ -94,3 +94,10 @@ a{
 .container-home.dark {
     background-color: black;
 }
+.profile,.UserList{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+}
